--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -66,7 +66,7 @@
 /* START: Home styles */
 
 .home__text-container {
-  @apply flex flex-col items-start justify-start gap-y-2.5 text-black-100;
+  @apply flex flex-col items-start justify-start gap-y-2.5 ;
 }
 
 .home__filters {
