--- a/frontend/app/dashboard/dashboard.module.css
+++ b/frontend/app/dashboard/dashboard.module.css
@@ -10,3 +10,29 @@
 .content{
     flex: 4;
 }
+
+
+.wrapper{
+display: flex;
+gap: 20px;
+}
+
+.main{
+
+    flex: 3;
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+
+.cards{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+
+}
+
+
+.side{
+flex: 1;
+}
