--- a/frontend/app/dashboard/dashboard.module.css
+++ b/frontend/app/dashboard/dashboard.module.css
@@ -37,7 +37,7 @@ gap: 20px;
 flex: 1;
 }
 
-.users_container{
+.home_container{
     padding: 20px;
     border-radius: 10px;
     margin-top: 20px;
